# Projeto-educacional

./: .env.example  cadastro.html  index.html  login.html  package-lock.json  package.json  script.js  style.css
back-end/: package-lock.json  package.json  server.js
back-end/src/controllers/: authControllers.js  useControllers.js
back-end/src/database/: config.js
back-end/src/routes/: usersRoutes.js
back-python/: .pdm.toml  app.py  pyproject.toml
back-python/config/: database.py
back-python/models/: user.py
back-python/routes/: rotas.py
front-end/: RETRAT~1.WEB  cadastro.html  index.html  login.html  script.js  style.css
front-react/: package-lock.json  package.json
front-react/public/: index.html
front-react/src/: App.js  App.jsx  index.js  router.jsx
front-react/src/Pages/cadastro/: cadastro.css  cadastro.jsx
front-react/src/Pages/home/: componente1.jsx  home.jsx
front-react/src/Pages/login/: login.css  login.jsx
front-react/src/components/carrossel/: carrosel.css  carrossel.jsx
front-react/src/components/footer/: footer.jsx
front-react/src/components/header/: header.css  header.jsx
front-react/src/components/home/: home.jsx
front-react/src/components/login/: login.jsx
front-react/src/components/navbar/: navbar.jsx
front-react/src/components/planos/: planos.jsx
front-react/src/components/tab/: tabela.css  tabela.jsx
front-react/src/img/: amigos.jfif
front-react/src/layout/: defaultLayout.jsx
src/: app.js
src/controllers/: useControllers.js
src/model/: userSchema.js
src/routes/: usersRoutes.js
(+1 files in other folders)
